# 365-core

./: .gitignore  README.md
Container/: Dockerfile
Examples/: CMakeLists.txt
Examples/Basics/: CMakeLists.txt  array_passing.cpp  arrays.cpp  chars.cpp  common.cpp  common.h  functions.cpp  overload.cpp  references.cpp  structs.cpp  types.cpp
Examples/Basics/LinkedList/: CMakeLists.txt  IntList.cpp  IntList.h
Examples/Basics/Timing/: CMakeLists.txt  pi_approx.cpp
Examples/Classes/: CMakeLists.txt  matrix.cpp  matrix.h  order.cpp  virtual.cpp  virtual.h
Examples/Classes/ColRow/: CMakeLists.txt  matrix.cpp  matrix.h
Examples/Classes/DataProcessing/: data.h  filter.h  test.cpp
Examples/Classes/Polynomial/: CMakeLists.txt  driver.cpp  poly.cpp  poly.h
Examples/Other/: CMakeLists.txt  forward.cpp  sptr.cpp  uptr.cpp  variadic.cpp  wptr.cpp
Examples/STL/: CMakeLists.txt  umap.cpp  unique.cpp  word_count.cpp
Examples/Templates/: CMakeLists.txt  blob.cpp  compare.cpp  complex.cpp  recursion.cpp  remove.cpp  sfinae.cpp  trailing.cpp
